hphp/test/quick/dynamic_eval.php.expectf
HipHop Fatal error: Undefined function: eval in %s on line 5
